--- a/src/less/app.less
+++ b/src/less/app.less
@@ -1,6 +1,6 @@
 @import "./mixin.less";
 
-#root {
+div[data-type="memos_view"] #root {
   .flex(row, flex-start, flex-start);
   width: 100%;
   height: 100%;
