--- a/src/less/daily-memo.less
+++ b/src/less/daily-memo.less
@@ -41,8 +41,11 @@
     margin-left: -12px;
     padding: 0;
     font-size: 16px;
+    margin-top: -3px;
 
     > .memo-content-text {
+      margin-top: -14px;
+
       .tag-span {
         cursor: unset;
 
@@ -62,6 +65,7 @@
         height: auto;
         border-radius: 4px;
         margin-bottom: 8px;
+        margin-top: 16px;
 
         &:last-child {
           margin-bottom: 0;
