--- a/src/less/editor.less
+++ b/src/less/editor.less
@@ -1,11 +1,12 @@
 @import "./mixin.less";
 
-.common-editor-wrapper {
+div[data-type="memos_view"] .common-editor-wrapper {
   .flex(column, flex-start, flex-start);
   position: relative;
   width: 100%;
   height: auto;
   background-color: white;
+  
 
   > .common-editor-inputer {
     display: inline-block;
