--- a/src/less/image.less
+++ b/src/less/image.less
@@ -1,6 +1,6 @@
 @import "./mixin.less";
 
-.image-container {
+div[data-type="memos_view"] .image-container {
   width: 200px;
   height: auto;
   overflow-y: scroll;
