--- a/src/less/memo-card-dialog.less
+++ b/src/less/memo-card-dialog.less
@@ -71,6 +71,7 @@
           line-height: 1.6;
           word-wrap: break-word;
           word-break: break-all;
+          padding-top: 4px;
 
           .tag-span {
             margin: 0;
@@ -189,7 +190,7 @@
 }
 
 @media only screen and (max-width: 875px) {
-  .dialog-wrapper.memo-card-dialog {
+  div[data-type="memos_view"] .dialog-wrapper.memo-card-dialog {
     padding: 24px 16px;
     padding-top: 64px;
   }
