--- a/src/less/usage-heat-map.less
+++ b/src/less/usage-heat-map.less
@@ -5,7 +5,7 @@
 @stat-day-L3-bg: #30a14e;
 @stat-day-L4-bg: #216e39;
 
-.usage-heat-map-wrapper {
+div[data-type="memos_view"] .usage-heat-map-wrapper {
   .flex(row, flex-start, center);
   width: 100%;
   height: 122px;
@@ -115,7 +115,7 @@
 }
 
 @media only screen and (max-width: 875px) {
-  .usage-heat-map-wrapper {
+  div[data-type="memos_view"] .usage-heat-map-wrapper {
     height: 160px;
     padding: 8px 0 !important;
     padding-top: 12px !important;
