--- a/src/less/memo-editor.less
+++ b/src/less/memo-editor.less
@@ -1,6 +1,6 @@
 @import "./mixin.less";
 
-.memo-editor-wrapper {
+div[data-type="memos_view"] .memo-editor-wrapper {
   .flex(column, flex-start, flex-start);
   position: relative;
   width: 100%;
@@ -30,7 +30,7 @@
 }
 
 @media only screen and (max-width: 875px) {
-  .memo-editor-wrapper {
+  div[data-type="memos_view"] .memo-editor-wrapper {
     width: calc(100% - 24px);
     margin: auto;
   }
