--- a/src/less/memo-filter.less
+++ b/src/less/memo-filter.less
@@ -1,6 +1,6 @@
 @import "./mixin.less";
 
-.filter-query-container {
+div[data-type="memos_view"] .filter-query-container {
   .flex(row, flex-start, flex-start);
   width: 100%;
   flex-wrap: wrap;
@@ -11,10 +11,13 @@
 
   > .tip-text {
     padding: 2px 0;
+    margin-left: -6px;
+    margin-right: 3px;
   }
 
   > .filter-item-container {
     padding: 2px 8px;
+    padding-left: 4px;
     margin-right: 6px;
     cursor: pointer;
     background-color: @bg-gray;
@@ -35,7 +38,7 @@
 }
 
 @media only screen and (max-width: 875px) {
-  .filter-query-container {
+  div[data-type="memos_view"] .filter-query-container {
     padding-left: 20px;
   }
 }
