--- a/src/less/memo-trash.less
+++ b/src/less/memo-trash.less
@@ -1,7 +1,7 @@
 @import "./mixin.less";
 @import "./memos-header.less";
 
-.memo-trash-wrapper {
+div[data-type="memos_view"] .memo-trash-wrapper {
   .flex(column, flex-start, flex-start);
   width: 100%;
   height: 100%;
@@ -38,7 +38,7 @@
 }
 
 @media only screen and (max-width: 875px) {
-  .deleted-memos-container {
+  div[data-type="memos_view"] .deleted-memos-container {
     padding: 0 12px;
   }
 }
