--- a/src/less/memo.less
+++ b/src/less/memo.less
@@ -1,7 +1,7 @@
 @import "./mixin.less";
 @import "./memo-content.less";
 
-.memo-wrapper {
+div[data-type="memos_view"] .memo-wrapper {
   .flex(column, flex-start, flex-start);
   width: 100%;
   padding: 12px 18px;
@@ -18,7 +18,7 @@
     .flex(row, space-between, center);
     width: 100%;
     height: 24px;
-    margin-bottom: 4px;
+    margin-bottom: 14px;
 
     > .time-text {
       font-size: 12px;
