--- a/src/less/memolist.less
+++ b/src/less/memolist.less
@@ -1,6 +1,6 @@
 @import "./mixin.less";
 
-.memolist-wrapper {
+div[data-type="memos_view"] .memolist-wrapper {
   .flex(column, flex-start, flex-start);
   flex-grow: 1;
   width: 100%;
@@ -33,7 +33,7 @@
 }
 
 @media only screen and (max-width: 875px) {
-  .memolist-wrapper {
+  div[data-type="memos_view"] .memolist-wrapper {
     padding: 0 12px;
   }
 }
