--- a/src/less/memos-header.less
+++ b/src/less/memos-header.less
@@ -1,7 +1,7 @@
 @import "./mixin.less";
 
-.section-header-container,
-.memos-header-container {
+div[data-type="memos_view"] .section-header-container,
+div[data-type="memos_view"] .memos-header-container {
   .flex(row, space-between, center);
   width: 100%;
   height: 40px;
@@ -43,8 +43,8 @@
 }
 
 @media only screen and (max-width: 875px) {
-  .section-header-container,
-  .memos-header-container {
+  div[data-type="memos_view"] .section-header-container,
+  div[data-type="memos_view"] .memos-header-container {
     height: auto;
     margin-top: 16px;
     margin-bottom: 0;
