--- a/src/less/menu-btns-popup.less
+++ b/src/less/menu-btns-popup.less
@@ -1,6 +1,6 @@
 @import "./mixin.less";
 
-.menu-btns-popup {
+div[data-type="memos_view"] .menu-btns-popup {
   .flex(column, flex-start, flex-start);
   position: absolute;
   margin-top: 4px;
@@ -40,7 +40,7 @@
 }
 
 @media only screen and (max-width: 875px) {
-  .menu-btns-popup {
+  div[data-type="memos_view"] .menu-btns-popup {
     margin-left: 64px;
   }
 }
