--- a/src/less/setting.less
+++ b/src/less/setting.less
@@ -1,7 +1,7 @@
 @import "./mixin.less";
 @import "./memos-header.less";
 
-.preference-wrapper {
+div[data-type="memos_view"] .preference-wrapper {
   .flex(column, flex-start, flex-start);
   width: 100%;
   height: 100%;
@@ -67,7 +67,7 @@
 }
 
 @media only screen and (max-width: 875px) {
-  .sections-wrapper {
+  div[data-type="memos_view"] .sections-wrapper {
     padding: 0 12px;
   }
 }
