--- a/src/less/siderbar.less
+++ b/src/less/siderbar.less
@@ -1,6 +1,6 @@
 @import "./mixin.less";
 
-.sidebar-wrapper {
+.memos-sidebar-wrapper {
   .flex(column, flex-start, flex-start);
   width: 240px;
   height: 100%;
@@ -18,14 +18,14 @@
 @media only screen and (max-width: 875px) {
   body.mobile-show-sidebar {
     #page-wrapper {
-      > .sidebar-wrapper {
+      > .memos-sidebar-wrapper {
         transform: translateX(0);
         box-shadow: 0 0 8px 0 rgb(0 0 0 / 20%);
       }
     }
   }
 
-  .sidebar-wrapper {
+  .memos-sidebar-wrapper {
     .flex(column, flex-start, center);
     z-index: 99;
     position: absolute;
