--- a/src/less/mixin.less
+++ b/src/less/mixin.less
@@ -2,6 +2,7 @@
 @text-gray: #52504b;
 @text-lightgray: #cac8c4;
 @text-blue: #5783f7;
+@text-unresolved-blue: #8fa2d6;
 @text-green: #55bb8e;
 @text-red: #d28653;
 
