--- a/src/less/user-banner.less
+++ b/src/less/user-banner.less
@@ -81,6 +81,11 @@ div[data-type="memos_view"] .user-banner-container {
     > .userinfo-header-container {
       padding: 0 16px;
 
+      > .action-btn {
+        width: 60px;
+      }
+
+
       > .username-text {
         font-size: 22px;
       }
@@ -100,3 +105,4 @@ div[data-type="memos_view"] .user-banner-container {
     }
   }
 }
+
