--- a/src/less/memo-trash.less
+++ b/src/less/memo-trash.less
@@ -1,7 +1,7 @@
 @import "./mixin.less";
 @import "./memos-header.less";
 
-div[data-type="memos_view"] .memo-trash-wrapper {
+.theme-light div[data-type="memos_view"] .memo-trash-wrapper {
   .flex(column, flex-start, flex-start);
   width: 100%;
   height: 100%;
@@ -16,7 +16,7 @@ div[data-type="memos_view"] .memo-trash-wrapper {
 
     > .title-text {
       font-weight: bold;
-      font-size: 18px;
+      font-size: 15px;
       color: @text-black;
     }
   }
@@ -34,31 +34,113 @@ div[data-type="memos_view"] .memo-trash-wrapper {
     overflow-y: scroll;
     padding-bottom: 64px;
     .hide-scroll-bar();
+
+    > .memo-wrapper {
+      > .memo-content-text{
+        line-height: 16px;
+      }
+    }
   }
 }
 
 @media only screen and (max-width: 875px) {
-  div[data-type="memos_view"] .deleted-memos-container {
-    padding: 0 12px;
+  .theme-light {
+    div[data-type="memos_view"] .deleted-memos-container {
+      padding: 0 12px;
+    }
+  
+    div[data-type="memos_view"] .memo-trash-wrapper {
+      .flex(column, flex-start, flex-start);
+      width: 100%;
+      height: 100%;
+      flex-grow: 1;
+      overflow-y: scroll;
+      .hide-scroll-bar();
+    
+      > .section-header-container {
+        width: 100%;
+        height: 58px;
+        margin-bottom: 0;
+    
+        > .title-text {
+          font-weight: bold;
+          font-size: 15px;
+          color: @text-black;
+        }
+      }
+    }
+  }
+}
+
+.theme-dark div[data-type="memos_view"] .memo-trash-wrapper {
+  .flex(column, flex-start, flex-start);
+  width: 100%;
+  height: 100%;
+  flex-grow: 1;
+  overflow-y: scroll;
+  .hide-scroll-bar();
+
+  > .section-header-container {
+    width: 100%;
+    height: 40px;
+    margin-bottom: 0;
+    color: @text-dark-black;
+
+    > .title-text {
+      font-weight: bold;
+      font-size: 18px;
+      color: @text-dark-black;
+    }
   }
 
-  div[data-type="memos_view"] .memo-trash-wrapper {
-    .flex(column, flex-start, flex-start);
+  > .tip-text-container {
     width: 100%;
-    height: 100%;
+    height: 128px;
+    .flex(column, center, center);
+  }
+
+  > .deleted-memos-container {
+    .flex(column, flex-start, flex-start);
     flex-grow: 1;
+    font-size: 15px;
+    width: 100%;
     overflow-y: scroll;
+    padding-bottom: 64px;
+    color: @text-dark-black;
     .hide-scroll-bar();
+
+    > .memo-wrapper {
+      > .memo-content-text{
+        line-height: 16px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 875px) {
+  .theme-dark {
+    div[data-type="memos_view"] .deleted-memos-container {
+      padding: 0 12px;
+    }
   
-    > .section-header-container {
+    div[data-type="memos_view"] .memo-trash-wrapper {
+      .flex(column, flex-start, flex-start);
       width: 100%;
-      height: 58px;
-      margin-bottom: 0;
-  
-      > .title-text {
-        font-weight: bold;
-        font-size: 18px;
-        color: @text-black;
+      height: 100%;
+      flex-grow: 1;
+      overflow-y: scroll;
+      .hide-scroll-bar();
+    
+      > .section-header-container {
+        width: 100%;
+        height: 58px;
+        margin-bottom: 0;
+    
+        > .title-text {
+          font-weight: bold;
+          font-size: 15px;
+          color: @text-dark-black;
+        }
       }
     }
   }
