--- a/src/less/mixin.less
+++ b/src/less/mixin.less
@@ -6,6 +6,15 @@
 @text-green: #55bb8e;
 @text-red: #d28653;
 
+@text-dark-black: #d2d1cd;
+@text-dark-gray: #c7c4bb;
+@text-dark-lightgray: #5e5b56;
+@text-dark-blue: #bbbec7;
+@text-dark-unresolved-blue: #8c92a1;
+@text-dark-green: #457560;
+@text-dark-red: #940B01;
+@text-dark-light-red: #d24c42;
+
 @bg-black: #2f3437;
 @bg-gray: #e4e4e4;
 @bg-whitegray: #f8f8f8;
@@ -14,6 +23,15 @@
 @bg-yellow: yellow;
 @bg-light-blue: #eef3fe;
 @bg-paper-yellow: #fbf4de;
+
+@bg-dark-black: #cacdcf;
+@bg-dark-gray: #353535;
+@bg-dark-whitegray: #808080;
+@bg-dark-lightgray: #727171;
+@bg-dark-blue: #2c395a;
+@bg-dark-yellow: rgb(119, 119, 119);
+@bg-dark-light-blue: #616161;
+@bg-dark-paper-yellow: #5f5f5f;
 
 .mono-font-family {
   font-family: "ubuntu-mono", SFMono-Regular, Menlo, Consolas, "PT Mono", "Liberation Mono", Courier, monospace;
