--- a/src/less/global.less
+++ b/src/less/global.less
@@ -22,7 +22,7 @@
   font-style: normal;
 }
 
-div[data-type="memos_view"] {
+.theme-light div[data-type="memos_view"] {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -32,22 +32,22 @@ div[data-type="memos_view"] {
     "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
-div[data-type="memos_view"] body,
-div[data-type="memos_view"] html {
+.theme-light div[data-type="memos_view"] body,
+.theme-light div[data-type="memos_view"] html {
   width: 100%;
   height: 100%;
   overflow: hidden;
   font-size: 15px;
 }
 
-div[data-type="memos_view"] code {
+.theme-light div[data-type="memos_view"] code {
   .mono-font-family();
   background-color: pink;
   padding: 2px 4px;
   border-radius: 4px;
 }
 
-div[data-type="memos_view"] pre {
+.theme-light div[data-type="memos_view"] pre {
   .mono-font-family();
 
   * {
@@ -55,11 +55,11 @@ div[data-type="memos_view"] pre {
   }
 }
 
-div[data-type="memos_view"] label,
-div[data-type="memos_view"] input,
-div[data-type="memos_view"] button,
-div[data-type="memos_view"] textarea,
-img {
+.theme-light div[data-type="memos_view"] label,
+.theme-light div[data-type="memos_view"] input,
+.theme-light div[data-type="memos_view"] button,
+.theme-light div[data-type="memos_view"] textarea,
+.theme-light img {
   background-color: transparent;
   user-select: none;
   -webkit-tap-highlight-color: transparent;
@@ -67,14 +67,14 @@ img {
   outline: none;
 }
 
-div[data-type="memos_view"] input:-webkit-autofill,
-div[data-type="memos_view"] input:-webkit-autofill:hover,
-div[data-type="memos_view"] input:-webkit-autofill:focus,
-div[data-type="memos_view"] input:-webkit-autofill:active {
+.theme-light div[data-type="memos_view"] input:-webkit-autofill,
+.theme-light div[data-type="memos_view"] input:-webkit-autofill:hover,
+.theme-light div[data-type="memos_view"] input:-webkit-autofill:focus,
+.theme-light div[data-type="memos_view"] input:-webkit-autofill:active {
   box-shadow: 0 0 0 30px white inset !important;
 }
 
-div[data-type="memos_view"] li:not(.rta__item) {
+.theme-light div[data-type="memos_view"] li:not(.rta__item) {
   list-style-type: none;
 
   &::before {
@@ -84,7 +84,7 @@ div[data-type="memos_view"] li:not(.rta__item) {
   }
 }
 
-div[data-type="memos_view"] a {
+.theme-light div[data-type="memos_view"] a {
   cursor: pointer;
   color: @text-blue;
   text-underline-offset: 2px;
@@ -94,7 +94,7 @@ div[data-type="memos_view"] a {
   }
 }
 
-div[data-type="memos_view"] a.is-unresolved{
+.theme-light div[data-type="memos_view"] a.is-unresolved{
   cursor: pointer;
   color: @text-unresolved-blue;
   text-underline-offset: 2px;
@@ -104,7 +104,7 @@ div[data-type="memos_view"] a.is-unresolved{
   }
 }
 
-div[data-type="memos_view"] .btn {
+.theme-light div[data-type="memos_view"] .btn {
   border: unset;
   background-color: unset;
   text-align: unset;
@@ -114,13 +114,120 @@ div[data-type="memos_view"] .btn {
   text-align: center;
 }
 
-.hidden {
+.theme-light .hidden {
   display: none !important;
 }
 
 @media only screen and (max-width: 875px) {
-  div[data-type="memos_view"] body,
-  div[data-type="memos_view"] html {
+  .theme-light div[data-type="memos_view"] body,
+  .theme-light div[data-type="memos_view"] html {
+    -webkit-overflow-scrolling: touch;
+  }
+}
+
+.theme-dark div[data-type="memos_view"] {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: @text-black;
+  -webkit-tap-highlight-color: transparent;
+  font-family: "DINPro", ui-sans-serif, -apple-system, "system-ui", "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif,
+    "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+.theme-dark .side-dock-ribbon-action[aria-label="Memos"] {
+  filter:invert(1);
+}
+
+.theme-dark div[data-type="memos_view"] body,
+.theme-dark div[data-type="memos_view"] html {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  font-size: 15px;
+}
+
+.theme-dark div[data-type="memos_view"] code {
+  .mono-font-family();
+  background-color: rgb(168, 168, 168);
+  padding: 2px 4px;
+  border-radius: 4px;
+}
+
+.theme-dark div[data-type="memos_view"] pre {
+  .mono-font-family();
+
+  * {
+    .mono-font-family();
+  }
+}
+
+.theme-dark div[data-type="memos_view"] label,
+.theme-dark div[data-type="memos_view"] input,
+.theme-dark div[data-type="memos_view"] button,
+.theme-dark div[data-type="memos_view"] textarea,
+.theme-dark img {
+  background-color: transparent;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  border: none;
+  outline: none;
+}
+
+.theme-dark div[data-type="memos_view"] input:-webkit-autofill,
+.theme-dark div[data-type="memos_view"] input:-webkit-autofill:hover,
+.theme-dark div[data-type="memos_view"] input:-webkit-autofill:focus,
+.theme-dark div[data-type="memos_view"] input:-webkit-autofill:active {
+  box-shadow: 0 0 0 30px rgb(0, 0, 0) inset !important;
+}
+
+.theme-dark div[data-type="memos_view"] li:not(.rta__item) {
+  list-style-type: none;
+
+  &::before {
+    content: "•";
+    font-weight: bold;
+    margin-right: 4px;
+  }
+}
+
+.theme-dark div[data-type="memos_view"] a {
+  cursor: pointer;
+  color: @text-blue;
+  text-underline-offset: 2px;
+
+  &:hover {
+    background-color: @bg-dark-blue;
+  }
+}
+
+.theme-dark div[data-type="memos_view"] a.is-unresolved{
+  cursor: pointer;
+  color: @text-unresolved-blue;
+  text-underline-offset: 2px;
+
+  &:hover {
+    background-color: @bg-dark-gray;
+  }
+}
+
+.theme-dark div[data-type="memos_view"] .btn {
+  border: unset;
+  background-color: unset;
+  text-align: unset;
+  font-size: unset;
+  user-select: none;
+  cursor: pointer;
+  text-align: center;
+}
+
+.theme-dark .hidden {
+  display: none !important;
+}
+
+@media only screen and (max-width: 875px) {
+  .theme-dark div[data-type="memos_view"] body,
+  .theme-dark div[data-type="memos_view"] html {
     -webkit-overflow-scrolling: touch;
   }
 }
