--- a/src/less/memo-filter.less
+++ b/src/less/memo-filter.less
@@ -1,6 +1,6 @@
 @import "./mixin.less";
 
-div[data-type="memos_view"] .filter-query-container {
+.theme-light div[data-type="memos_view"] .filter-query-container {
   .flex(row, flex-start, flex-start);
   width: 100%;
   flex-wrap: wrap;
@@ -38,7 +38,51 @@ div[data-type="memos_view"] .filter-query-container {
 }
 
 @media only screen and (max-width: 875px) {
-  div[data-type="memos_view"] .filter-query-container {
+  .theme-light div[data-type="memos_view"] .filter-query-container {
+    padding-left: 20px;
+  }
+}
+
+.theme-dark div[data-type="memos_view"] .filter-query-container {
+  .flex(row, flex-start, flex-start);
+  width: 100%;
+  flex-wrap: wrap;
+  padding: 12px 12px;
+  padding-bottom: 4px;
+  font-size: 13px;
+  line-height: 1.8;
+
+  > .tip-text {
+    padding: 2px 0;
+    margin-left: -6px;
+    margin-right: 3px;
+    color: @text-dark-black;
+  }
+
+  > .filter-item-container {
+    padding: 2px 8px;
+    padding-left: 4px;
+    margin-right: 6px;
+    cursor: pointer;
+    background-color: @bg-dark-black;
+    border-radius: 4px;
+    max-width: 200px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    > .icon-text {
+      letter-spacing: 2px;
+    }
+
+    &:hover {
+      text-decoration: line-through;
+    }
+  }
+}
+
+@media only screen and (max-width: 875px) {
+  .theme-dark div[data-type="memos_view"] .filter-query-container {
     padding-left: 20px;
   }
 }
