--- a/src/less/search-bar.less
+++ b/src/less/search-bar.less
@@ -1,6 +1,6 @@
 @import "./mixin.less";
 
-div[data-type="memos_view"] .search-bar-container {
+.theme-light div[data-type="memos_view"] .search-bar-container {
   width: 160px;
 
   > .search-bar-inputer {
@@ -104,29 +104,166 @@ div[data-type="memos_view"] .search-bar-container {
 }
 
 @media only screen and (max-width: 875px) {
-  div[data-type="memos_view"] .search-bar-container {
-    > .quickly-action-wrapper {
-      right: 4px;
+  .theme-light {
+    div[data-type="memos_view"] .search-bar-container {
+      > .quickly-action-wrapper {
+        right: 4px;
+      }
+  
+      > .search-bar-inputer {
+        .flex(row, flex-start, center);
+        background-color: @bg-lightgray;
+        width: 100%;
+        padding: 8px 16px;
+        border-radius: 8px;
+        width: 120%;
+        margin-left: -35px;
+      }
+  
+      > .quickly-action-wrapper {
+        display: none;
+        position: absolute;
+        top: 32px;
+        right: 4px;
+        z-index: 2;
+        padding: 8px;
+        width: 320px;
+      }
+    }
+  }
+}
+
+.theme-dark div[data-type="memos_view"] .search-bar-container {
+  width: 160px;
+
+  > .search-bar-inputer {
+    .flex(row, flex-start, center);
+    background-color: @bg-dark-lightgray;
+    width: 100%;
+    padding: 2px 16px;
+    border-radius: 8px;
+
+    > .icon-img {
+      margin-right: 8px;
+      width: 14px;
+      height: auto;
+      opacity: 0.6;
     }
 
-    > .search-bar-inputer {
-      .flex(row, flex-start, center);
-      background-color: @bg-lightgray;
+    > .text-input {
       width: 100%;
-      padding: 8px 16px;
-      border-radius: 8px;
-      width: 120%;
-      margin-left: -35px;
+      font-size: 15px;
+      color: @text-dark-black;
     }
 
-    > .quickly-action-wrapper {
-      display: none;
-      position: absolute;
-      top: 32px;
-      right: 4px;
-      z-index: 2;
-      padding: 8px;
-      width: 320px;
+    &:hover {
+      + .quickly-action-wrapper {
+        display: flex;
+      }
     }
+  }
+
+  > .quickly-action-wrapper {
+    display: none;
+    position: absolute;
+    top: 52px;
+    right: -8px;
+    z-index: 2;
+    padding: 8px;
+    width: 320px;
+
+    > .quickly-action-container {
+      .flex(column, flex-start, flex-start);
+      width: 100%;
+      background-color: rgb(0, 0, 0);
+      padding: 12px 16px;
+      border-radius: 8px;
+      box-shadow: 0 0 8px 0 rgba(255, 255, 255, 0.2);
+
+      > .title-text {
+        color: rgb(204, 204, 204);
+        font-size: 12px;
+      }
+
+      > .types-container {
+        .flex(row, flex-start, flex-start);
+        width: 100%;
+        font-size: 13px;
+        margin-top: 8px;
+
+        > .section-text {
+          color: rgb(223, 223, 223);
+          margin-right: 4px;
+          flex-shrink: 0;
+          line-height: 26px;
+        }
+
+        > .values-container {
+          .flex(row, flex-start, flex-start);
+          flex-wrap: wrap;
+          user-select: none;
+
+          > div {
+            .flex(row, flex-start, center);
+            line-height: 26px;
+
+            .type-item {
+              cursor: pointer;
+              padding: 0 4px;
+              border-radius: 6px;
+              color: @text-dark-black;
+
+              &:hover {
+                background-color: @bg-dark-whitegray;
+              }
+
+              &.selected {
+                background-color: @text-dark-green;
+                color: rgb(0, 0, 0);
+              }
+            }
+
+            .split-text {
+              color: rgb(104, 104, 104);
+              margin: 0 2px;
+            }
+          }
+        }
+      }
+    }
+
+    &:hover {
+      display: flex;
+    }
+  }
+}
+
+@media only screen and (max-width: 875px) {
+  .theme-dark {
+    div[data-type="memos_view"] .search-bar-container {
+      > .quickly-action-wrapper {
+        right: 4px;
+      }
+  
+      > .search-bar-inputer {
+        .flex(row, flex-start, center);
+        background-color: @bg-dark-lightgray;
+        width: 100%;
+        padding: 2px 16px;
+        border-radius: 8px;
+        width: 120%;
+        margin-left: -35px;
+      }
+  
+      > .quickly-action-wrapper {
+        display: none;
+        position: absolute;
+        top: 32px;
+        right: 4px;
+        z-index: 2;
+        padding: 8px;
+        width: 320px;
+      }
+    } 
   }
 }
