Fix some css error

--- a/styles.css
+++ b/styles.css
@@ -2626,7 +2626,7 @@ div[data-type="memos_view"] .image-container > img {
   align-items: flex-start;
   width: 100%;
   padding: 12px 18px;
-  background-color: #dbdbdb;
+  background-color: #ffffff;
   margin-top: 8px;
   border-radius: 8px;
   border: 1px solid transparent;
