--- a/src/less/search-bar.less
+++ b/src/less/search-bar.less
@@ -178,7 +178,8 @@
       background-color: rgb(0, 0, 0);
       padding: 12px 16px;
       border-radius: 8px;
-      box-shadow: 0 0 8px 0 rgba(255, 255, 255, 0.2);
+      margin-top: -8px;
+      // box-shadow: 0 0 8px 0 rgba(255, 255, 255, 0.2);
 
       > .title-text {
         color: rgb(204, 204, 204);
